# calendar-notion-sync-tool

./: .env  .env.template  .gitignore  Makefile  README.md  USER_MANUAL.md  calendar.json  configs.json  environment.dev.yml  environment.yml  import_test_results.txt  pyproject.toml  requirements.txt
notion_calendar_sync/: logging_config.py  main.py  query_notion.py  settings.py  utils.py
notion_calendar_sync/apps/flask/: app.py  config.py  wsgi.py
notion_calendar_sync/apps/flask/routes/: main.py
notion_calendar_sync/apps/flask/static/css/: main.css
notion_calendar_sync/apps/flask/static/js/: main.js
notion_calendar_sync/apps/flask/templates/: add_item.html  base.html  build.html  calendar.html  index.html  notion_tools.html  settings.html  sync.html
notion_calendar_sync/apps/tkinker/: app.py
notion_calendar_sync/clients/: calendar_client.py  notion_client.py
notion_calendar_sync/docs/: comprehensive_plan.md
notion_calendar_sync/features/: spaced_repetition.py  study_planner.py  weekly_review.py
notion_calendar_sync/local/: builder.py  schema.py  setup.py  updater.py
notion_calendar_sync/models/: core.py  notion_mappers.py
notion_calendar_sync/providers/: ics_provider.py
notion_calendar_sync/sync/: core.py  logic.py
notion_calendar_sync/web/: config_manager.py  scheduler.py  services.py
tests/: test_imports.py
tests/integration/: test_sync_engine.py
tests/unit/: test_flask_routes.py  test_models.py  test_utils.py
